--- a/omnibus/files/private-chef-cookbooks/private-chef/templates/default/expander.rb.erb
+++ b/omnibus/files/private-chef-cookbooks/private-chef/templates/default/expander.rb.erb
@@ -1,11 +1,11 @@
 log_location       STDOUT
 
-solr_url  "http://<%= node['private_chef']['opscode-solr4']['vip'] %>:<%= node['private_chef']['opscode-solr4']['port'] %>"
+solr_url  "<%= OmnibusHelper.new(node).solr_root %>"
 amqp_host '<%= node['private_chef']['rabbitmq']['vip'] %>'
 amqp_port <%= node['private_chef']['rabbitmq']['node_port'] %>
 amqp_user '<%= node['private_chef']['rabbitmq']['user'] %>'
 amqp_pass '<%= node['private_chef']['rabbitmq']['password'] %>'
-<% if @reindexer == true %> 
+<% if @reindexer == true %>
 amqp_vhost '<%= node['private_chef']['rabbitmq']['reindexer_vhost'] %>'
 ps_tag '-reindexer'
 <% else %>
